--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,22 @@
 version: "3.9"
 
 services:
+  redis:
+    image: redis:7
+    container_name: redis_local
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
   api:
     build: .
     container_name: enova-academy
     ports:
       - "8080:80"
     depends_on:
+      redis:
+        condition: service_started
       localstack:
-        condition: service_started    
+        condition: service_started
       db:
         condition: service_healthy
     environment:
