--- a/src/appsettings.example.json
+++ b/src/appsettings.example.json
@@ -13,6 +13,7 @@
     "Audience": "enova-academy"
   },
   "ConnectionStrings": {
+    "Redis": "localhost:6379",
     "DefaultConnection": "Server=127.0.0.1;Port=3307;Database=mydb;User=root;Password=root"
   },
   "Logging": {
