--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,33 @@
 version: "3.9"
 
 services:
+  prometheus:
+    image: prom/prometheus:v2.49.1
+    ports:
+      - "9090:9090"
+    networks:
+      - backend
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana:9.5.15
+    ports:
+      - "3000:3000"
+    networks:
+      - backend
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana-datasource.yml:/etc/grafana/provisioning/datasources/grafana-datasource.yml
+      - ./grafana-dashboard.yml:/etc/grafana/provisioning/dashboards/grafana-dashboard.yml
+      - ./grafana-dashboard-cache.json:/var/lib/grafana/dashboards/grafana-dashboard-cache.json
+    depends_on:
+      - prometheus
+
   redis:
     image: redis:7
     container_name: redis_local
@@ -80,6 +107,7 @@ services:
 volumes:
   localstack-data:
   db_data:
+  grafana_data:
 
 networks:
   backend:
